src/styles/layout/_nugget_table_view_layout.sass
#nuggetTableView
  display: grid
  align-self: stretch
  align-items: start
  > .entities
    display: grid
    .table
      display: grid
      grid-template-columns: 50px 40px 2fr 1fr 1fr  1fr 40px 1fr 1fr
      grid-auto-rows: 40px
      grid-row-gap: 5px
      grid-column-gap: 5px
      .row
        display: contents
        .cell
          display: grid
          align-items: center
          p
            overflow: hidden
            white-space: nowrap
            text-overflow: ellipsis
          &.notification
            justify-items: center
            img
              width: 15px
        &.header
          .cell
            overflow: visible
            justify-self: center
            grid-column-gap: 15px
            &.active
              grid-template-columns: 1fr 10px
              .icon
                width: 100%
                display: grid
      .title
        padding: 0 16px
      .subscribe
        justify-content: center
        align-content: center

